--- a/style.css
+++ b/style.css
@@ -1,19 +1,28 @@
 *{
     margin: 0px;
     padding: 0px;
+    font-family: "Source Code Pro", monospace;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   
-}
+  }
+
+
+
 
 .navbar{
+   
     display: flex;
     height: 70px;
+   
     
-    
+    padding: 10px 60px;
     align-items: center;
 }
 ul>li{
     display: inline-block;
-
+color: #666666;
 margin-right: 20px;
 }
 
@@ -23,25 +32,351 @@ width: 80px;
 height: 40px;
 display: flex;
 align-items: center;
-margin-left: 60px;
+
  margin-right: 20px;
+ justify-self: start;
 }
+
+
 
 .img{
     background-image: url(./assets/download.png);
     width: 70px;
     height: 25px;
     background-size: cover;
+    object-fit: contain;
+
    
 }
 
 .icon2{
-  margin-left: 30px;
+  /* margin-left: 30px; */
   font-size: 20px;
+  margin-left: auto;
+
+  
 }
+.i2{
+ float: right;
+}
+
 .list{
-    width: 80%;
+    
     color: #666666;
     font-size: 16px;
+    justify-self: start;
     
+}
+
+.li:hover{
+    color: black;
+}
+
+
+/* hero section */
+
+.hero{
+   width: 100%;
+   height: 620px;
+   position: relative;
+   
+}
+.img1{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+}
+.heading1{
+    position: absolute;
+    top: 30px;
+    left: 60px;
+    color: white;
+     
+}
+.heading2{
+    position: absolute;
+    top: 80px;
+    left: 60px;
+    color: white;
+    
+}
+.b1{
+    position: absolute;
+    top: 120px;
+    left: 60px;
+    padding: 20px 30px;
+    background-color: white;
+    border: none;
+    letter-spacing: 1px;
+    font-weight: 600;
+}
+
+.b1:hover{
+    background-color: rgb(199, 196, 196);
+}
+
+/* card-section */
+.card-section1{
+display: grid;
+padding: 30px 60px;
+grid-template-columns: 1fr 1fr ;
+gap: 40px;
+}
+
+
+
+.card-img1{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.card2{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+
+}
+
+.card2 h1,p,button{
+    margin: 20px;
+}
+
+.card2-h1{
+    font-weight: 500;
+    color: #333333;
+    word-spacing: 0.01px;
+}
+
+.card2-p{
+ color: #333333;
+}
+
+.b2{
+     background-color:  black;
+    border: none;
+    letter-spacing: 1px;
+    font-weight: 600;
+    color: white;
+      padding: 20px 30px;
+}
+.b2:hover{
+    background-color: grey;
+}
+
+
+
+.cards-2{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 50px 50px; 
+    gap: 10px;
+    justify-content: start ;
+}
+.card4,.card5,.card6{
+    height: 400px;
+     display: flex;
+    flex-direction: column;
+align-items: center;
+
+    
+    
+}
+.cards-2 img{
+    height: 60%;
+    width: 100%;
+    object-fit: cover;
+}
+ 
+.anchor{
+    text-decoration: underline;
+    color: black;
+    
+}
+.card4:hover{
+    text-decoration: underline;
+}
+.card5:hover{
+    text-decoration: underline;
+}.card6:hover{
+    text-decoration: underline;
+}
+
+
+
+/* .parapraph{
+    text-align: start;
+}
+
+
+
+/* footer */
+
+.footer{
+    display: flex;
+ 
+    padding: 70px 70px 10px 40px ;
+    background-color: black;
+    color: white;
+    height: 360px;
+    flex-basis: 33%;
+    flex-wrap: wrap;
+    border-bottom: 1px solid rgb(85, 83, 83);
+}
+
+.footer li{
+    display: block;
+    color: white;
+line-height: 30px;
+font-size: 12px;
+}
+ .footer ul{
+margin-top: 25px;
+}
+.firstdiv,.seconddiv,.thirddiv,.fdiv{
+flex-basis: 33%;
+height: 140px;
+
+}
+
+.footer h2{
+    font-size: 20px;
+}
+
+.footer2{
+    height: 80px;
+    background-color: black;
+    color: white;
+    padding: 20px 0px 30px 32px ;
+}
+.footer2 p{
+    margin: 0px
+}
+
+
+
+
+@media (max-width:1023px)  {
+    .navbar {
+        
+        margin: 0px auto;
+    }
+    .li{
+        display: none;
+    }
+    .card-section1{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    
+}
+
+
+
+@media (max-width:320px) {
+    .card1{
+       display: none;
+    }
+
+.heading1{
+    display: none;
+
+}
+.heading2{
+    display: none;
+}
+.b1{
+    bottom: 10px;
+    top: 520px;
+    width: auto;
+}
+
+    .card-section1{
+        display: grid;
+        grid-template-columns: 1fr;
+        padding: 5px;
+        
+    }
+
+    .cards-2{
+        display: grid;
+        grid-template-columns: 1fr;
+    padding: 28px;
+    
+}
+
+.card4,.card5,.card6{
+    height: 300px;
+}
+.card6 p{
+    margin: 0px;
+}
+.card4 p{
+    margin: 0px;
+}.card5 p{
+    margin: 0px;
+}
+
+.cards-2 img{
+    object-fit: contain;
+}
+}
+@media (max-width:479px) {
+    .heading1{
+        display: none;
+    }
+    .heading2{
+        display: none;
+    }
+    
+}
+
+
+@media (min-width:321px) and (max-width:374px)  {
+ .card-section1{
+    padding: 5px;
+ }   
+}
+
+@media (min-width:375px) and (max-width:1023px) {
+    .card-section1{
+        padding: 28px;
+    }
+    
+}
+
+@media (min-width:300px) and (max-width:768px) {
+    .card-section1{
+        display: grid;
+        grid-template-columns: 1fr;
+       
+    }
+
+     .cards-2{
+        display: grid;
+        grid-template-columns: 1fr;
+    padding: 28px;
+    
+}
+
+
+
+    
+}
+
+@media (min-width:768px) and (max-width:1023px) {
+    .cards-2{
+        display: grid;
+        grid-template-columns: 1fr;
+    padding: 28px;
+    
+    }
+    .cards-2 img{
+        height: 400px ;
+    }
+    .card4,.card5,.card6{
+    height: 500px;
+}
 }
